Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15602

Qt Quick ignores language change event

    XMLWordPrintable

Details

    Description

      When the QEvent::LanguageChange is received, all strings in QML should be retranslated, like retranslateUI does for ui files.

      Additionally, all urls from QResources should be re-evaluated for locale-specific aliases.

      See also http://bugreports.qt.nokia.com/browse/QTBUG-15601

      Attachments

        Activity

          People

            shausman Simon Hausmann
            steveire Stephen Kelly (Personal)
            Votes:
            40 Vote for this issue
            Watchers:
            36 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: